--- a/less/mixins.less
+++ b/less/mixins.less
@@ -8,15 +8,8 @@
 }
 
 //*---------------------------------------------------
-//    LESS Elements 0.6
+//    Based on LESS Elements 0.6 by Dmitry Fadeyev
 //  ---------------------------------------------------
-//    A set of useful LESS mixins by Dmitry Fadeyev
-//    Special thanks for mixin suggestions to:
-//      Kris Van Herzeele,
-//      Benoit Adam,
-//      Portenart Emile-Victor,
-//      Ryan Faerman
-//
 //    More info at: http://lesselements.com
 //-----------------------------------------------------*/
 //*
