add ms- and o- prefixes for rotation and for scale mixin

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -137,11 +137,15 @@
 .rotation(@deg:5deg){
 	-webkit-transform: rotate(@deg);
 	-moz-transform: rotate(@deg);
+	-o-transform: rotate(@deg);
+	-ms-transform: rotate(@deg);
 	transform: rotate(@deg);
 }
 .scale(@ratio:1.5){
 	-webkit-transform:scale(@ratio);
 	-moz-transform:scale(@ratio);
+	-o-transform:scale(@ratio);
+	-ms-transform:scale(@ratio);
 	transform:scale(@ratio);
 }
 .translate(@x:0, @y:0) {
