--- a/less/mixins.less
+++ b/less/mixins.less
@@ -8,6 +8,17 @@
 }
 
 //*---------------------------------------------------
+// Webkit-style focus from https://github.com/twitter/bootstrap
+//-----------------------------------------------------*/
+.tab-focus() {
+  // Default
+  outline: thin dotted #333;
+  // Webkit
+  outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
+}
+
+//*---------------------------------------------------
 //    Based on LESS Elements 0.6 by Dmitry Fadeyev
 //  ---------------------------------------------------
 //    More info at: http://lesselements.com
