--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/*--------------- reset ------------------- */
 article,
 aside,
 details,
@@ -25,73 +24,62 @@ video {
 audio:not([controls]) {
   display: none;
 }
-[hidden] {
-  display: none;
-}
 html {
   font-size: 100%;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
 }
-html,
-button,
-input,
-select,
-textarea {
-  font-family: sans-serif;
-  color: #222222;
-}
-body {
-  margin: 0;
-  font-size: 1em;
-  line-height: 1.4;
-}
 a:focus {
-  outline: thin dotted;
+  outline: thin dotted #333;
+  outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
 }
 a:hover,
 a:active {
   outline: 0;
 }
+sub,
+sup {
+  position: relative;
+  font-size: 75%;
+  line-height: 0;
+  vertical-align: baseline;
+}
+sup {
+  top: -0.5em;
+}
+sub {
+  bottom: -0.25em;
+}
 img {
+  max-width: 100%;
+  vertical-align: middle;
   border: 0;
   -ms-interpolation-mode: bicubic;
-  vertical-align: middle;
 }
-svg:not(:root) {
-  overflow: hidden;
-}
-figure {
-  margin: 0;
-}
-form {
-  margin: 0;
-}
-fieldset {
-  border: 0;
-  margin: 0;
-  padding: 0;
-}
-label {
-  cursor: pointer;
+#map_canvas img {
+  max-width: none;
 }
 button,
 input,
 select,
 textarea {
-  font-size: 100%;
   margin: 0;
-  vertical-align: baseline;
-}
-.lt-ie8 button,
-.lt-ie8 input,
-.lt-ie8 select,
-.lt-ie8 textarea {
+  font-size: 100%;
   vertical-align: middle;
 }
 button,
 input {
   line-height: normal;
+}
+.lt-ie8 button,
+.lt-ie8 input {
+  overflow: visible;
+}
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+  padding: 0;
+  border: 0;
 }
 button,
 input[type="button"],
@@ -100,51 +88,19 @@ input[type="submit"] {
   cursor: pointer;
   -webkit-appearance: button;
 }
-.lt-ie8 button,
-.lt-ie8 input[type="button"],
-.lt-ie8 input[type="reset"],
-.lt-ie8 input[type="submit"] {
-  overflow: visible;
-}
-button[disabled],
-input[disabled] {
-  cursor: default;
-}
-input[type="checkbox"],
-input[type="radio"] {
-  box-sizing: border-box;
-  padding: 0;
-  *width: 13px;
-  *height: 13px;
-}
 input[type="search"] {
-  -webkit-appearance: textfield;
   -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
   box-sizing: content-box;
+  -webkit-appearance: textfield;
 }
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button {
   -webkit-appearance: none;
 }
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-}
 textarea {
   overflow: auto;
   vertical-align: top;
-  resize: vertical;
 }
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-td {
-  vertical-align: top;
-}
-/*----------------------------------------- */
 /*--------------- grid ------------------- */
 /*----------------------------------------- */
 ::-moz-selection {
@@ -156,6 +112,30 @@ td {
   background: #222222;
   color: #fff;
   text-shadow: none;
+}
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+h2 {
+  font-size: 1.5em;
+  margin: 0.83em 0;
+}
+h3 {
+  font-size: 1.17em;
+  margin: 1em 0;
+}
+h4 {
+  font-size: 1em;
+  margin: 1.33em 0;
+}
+h5 {
+  font-size: 0.83em;
+  margin: 1.67em 0;
+}
+h6 {
+  font-size: 0.75em;
+  margin: 2.33em 0;
 }
 a {
   color: #222222;
