--- a/less/mixins.less
+++ b/less/mixins.less
@@ -72,6 +72,12 @@
 //	mixins
 //-----------------------------------------------------*/
 
+// @opacity
+.opacity(@opacity) {
+  opacity: @opacity / 100;
+  filter: ~"alpha(opacity=@{opacity})";
+}
+
 .bordered(@top-color: #EEE, @right-color: #EEE, @bottom-color: #EEE, @left-color: #EEE) {
 	border-top: solid 1px @top-color;
 	border-left: solid 1px @left-color;
