--- a/less/preset.less
+++ b/less/preset.less
@@ -4,6 +4,12 @@
 
 /*----------------------------------------- */
 
+html,
+body {
+	margin: 0;
+}
+
+
 // based on HTML5 Boilerplate
 // h5bp.com/css
 
