--- a/less/style-example.less
+++ b/less/style-example.less
@@ -1,11 +1,15 @@
+//*
 //imports
+//-------------------------------------*/
 @import "mixins";
 @import "vars";
 @import "reset";
 @import "preset";
 
-//project specfic code
 
+//*
+//project specfic code
+//-------------------------------------*/
 html {
 	font: 14px/1.4em sans-serif;
 }
