--- a/less/vars.less
+++ b/less/vars.less
@@ -1,5 +1,23 @@
-//colors
+//COLORS
+// --------------------------------------------------
 @brand: #222;
 @running-text: #a0a0a0;
 
 //dimensions
+// -------------------------
+
+
+// GRID
+// --------------------------------------------------
+
+// Default 940px grid
+// -------------------------
+@gridColumns: 12;
+@gridColumnWidth: 60px;
+@gridGutterWidth: 20px;
+@gridRowWidth: (@gridColumns * @gridColumnWidth) + (@gridGutterWidth * (@gridColumns - 1));
+
+// Fluid grid
+// -------------------------
+@fluidGridColumnWidth: 6.382978723%;
+@fluidGridGutterWidth: 2.127659574%;
