--- a/less/reset.less
+++ b/less/reset.less
@@ -1,6 +1,7 @@
+// Reset
+// ------------------------------------------------------------------------
 // based on Reset.less
 // Adapted from Normalize.css http://github.com/necolas/normalize.css
-// ------------------------------------------------------------------------
 
 // Display in IE6-9 and FF3
 // -------------------------
@@ -50,11 +51,9 @@ html {
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%;
 }
-// Focus states
 a:focus {
 	.tab-focus();
 }
-// Hover & Active
 a:hover,
 a:active {
 	outline: 0;
