--- a/less/vars.less
+++ b/less/vars.less
@@ -1,6 +1,7 @@
 //COLORS
 // --------------------------------------------------
 @brand: #222;
+@off-brand: #fff;
 @running-text: #a0a0a0;
 
 //dimensions
