adjust content + styles for index page

--- a/less/style-index.less
+++ b/less/style-index.less
@@ -35,46 +35,32 @@ blockquote {
 
 
 // page setup
-.header,
-.main-section,
-.footer {
+.main-section {
 	width: 980px;
-	margin: 0 auto 10px;
-}
-
-// header
-.header {
-	margin-top: 20px;
-}
-.main-nav {
-	margin-bottom: 20px;
-}
-.main-nav-inner-item {
-	display: inline-block;
-	margin: 0 10px 0 0;
-}
-.lt-ie8 .main-nav-inner-item {
-	.ie7-inline-block;
-}
-.main-nav-inner-content {
-	display: block;
-	padding: 5px 10px;
-	line-height: 1em;
-	background: #ddd;
-	border-radius: 3px;
-
-	&:hover {
-		background-color: #000;
-		color: #fff;
-	}
+	margin: 20px auto 40px;
 }
 
 // section content
-.aside {
-	padding: 10px 0 0;
+h1 {
+	margin-bottom: 2em;
+}
+li a {
+	display: block;
+	width: 100px;
+	margin: 0 0 20px 0;
+	padding: 12px 30px 8px;
+	background-color: #0e90ff;
+	color: #fff;
+	text-shadow: #fff 10px -6px 2px;
+	border-radius: 3px;
 
-	h1 {
-		font-size: 1.2em;
+	&:hover {
+		box-shadow: 0px 0px 5px #333;
+		color: #fff;
+	}
+
+	&:visited {
+		color: #fff;
 	}
 }
 
