--- a/css/style-index.css
+++ b/css/style-index.css
@@ -373,42 +373,29 @@ blockquote:before {
 blockquote:after {
   content: '“';
 }
-.header,
-.main-section,
-.footer {
+.main-section {
   width: 980px;
-  margin: 0 auto 10px;
+  margin: 20px auto 40px;
 }
-.header {
-  margin-top: 20px;
+h1 {
+  margin-bottom: 2em;
 }
-.main-nav {
-  margin-bottom: 20px;
-}
-.main-nav-inner-item {
-  display: inline-block;
-  margin: 0 10px 0 0;
-}
-.lt-ie8 .main-nav-inner-item {
-  display: inline;
-  zoom: 1;
-}
-.main-nav-inner-content {
+li a {
   display: block;
-  padding: 5px 10px;
-  line-height: 1em;
-  background: #ddd;
+  width: 100px;
+  margin: 0 0 20px 0;
+  padding: 12px 30px 8px;
+  background-color: #0e90ff;
+  color: #fff;
+  text-shadow: #ffffff 10px -6px 2px;
   border-radius: 3px;
 }
-.main-nav-inner-content:hover {
-  background-color: #000;
+li a:hover {
+  box-shadow: 0px 0px 5px #333;
   color: #fff;
 }
-.aside {
-  padding: 10px 0 0;
-}
-.aside h1 {
-  font-size: 1.2em;
+li a:visited {
+  color: #fff;
 }
 .footer section {
   padding: 10px;
