--- a/css/style-example.css
+++ b/css/style-example.css
@@ -292,37 +292,37 @@ body {
 }
 ::-moz-selection {
   background: #222222;
-  color: #fff;
+  color: #ffffff;
   text-shadow: none;
 }
 ::selection {
   background: #222222;
-  color: #fff;
+  color: #ffffff;
   text-shadow: none;
 }
 h1 {
   font-size: 2em;
-  margin: 0.67em 0;
+  margin: 0 0 0.67em;
 }
 h2 {
   font-size: 1.5em;
-  margin: 0.83em 0;
+  margin: 0 0 0.83em;
 }
 h3 {
   font-size: 1.17em;
-  margin: 1em 0;
+  margin: 0 0 1em;
 }
 h4 {
   font-size: 1em;
-  margin: 1.33em 0;
+  margin: 0 0 1.33em;
 }
 h5 {
   font-size: 0.83em;
-  margin: 1.67em 0;
+  margin: 0 0 1.67em;
 }
 h6 {
   font-size: 0.75em;
-  margin: 2.33em 0;
+  margin: 0 0 2.33em;
 }
 h1,
 h2,
