--- a/less/style-index.less
+++ b/less/style-index.less
@@ -33,34 +33,55 @@ blockquote {
 	}
 }
 
+hr {
+	border: 1px solid #222;
+}
+
 
 // page setup
-.main-section {
+.wrapper {
 	width: 980px;
-	margin: 20px auto 40px;
+	margin: 0 auto 28px;
+}
+.main-nav-inner-item {
+	display: inline-block;
+	margin: 0 10px 0 0;
+}
+
+.header {
+	margin-top: 28px;
 }
 
 // section content
-h1 {
-	margin-bottom: 2em;
-}
-li a {
-	display: block;
-	width: 100px;
-	margin: 0 0 20px 0;
-	padding: 12px 30px 8px;
-	background-color: #0e90ff;
-	color: #fff;
-	text-shadow: #fff 10px -6px 2px;
-	border-radius: 3px;
+.main-nav-inner-content {
+	display: inline-block;
+	//width: 100px;
+	margin: 0 0 28px 0;
+	padding: 4px 10px 1px;
+	background-color: #222;
+	color: #eee;
+	//text-shadow: #fff 1px 1px 1px;
+	border-radius: 1px;
 
 	&:hover {
 		box-shadow: 0px 0px 5px #333;
 		color: #fff;
+		background-color: #f00;
 	}
 
 	&:visited {
 		color: #fff;
+	}
+}
+
+.grid-button {
+	text-align: right;
+}
+
+.main-section {
+
+	article {
+		margin-bottom: 1em;
 	}
 }
 
