--- a/less/style-example2.less
+++ b/less/style-example2.less
@@ -39,7 +39,7 @@ blockquote {
 	width: 100%; // IE7
 }
 .inner-wrapper {
-	width: 980px;
+	width: 940px;
 	margin: 0 auto;
 	position: relative;
 	overflow: hidden;
@@ -89,7 +89,7 @@ blockquote {
 }
 
 // footer
-.footer section {
+.footer .inner-wrapper {
 	padding: 10px;
 	border-top: 2px dashed #a60c00;
 	font-size: 85%;
