--- a/css/style-index.css
+++ b/css/style-index.css
@@ -24,7 +24,8 @@ footer,
 header,
 hgroup,
 nav,
-section {
+section,
+summary {
   display: block;
 }
 audio,
@@ -40,19 +41,30 @@ video {
 }
 audio:not([controls]) {
   display: none;
+  height: 0;
+}
+[hidden] {
+  display: none;
 }
 html {
   font-size: 100%;
+  font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
+}
+body {
+  margin: 0;
+}
+p {
+  margin: 1em 0;
 }
 a:focus {
   outline: thin dotted #333;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
-a:hover,
-a:active {
+a:active,
+a:hover {
   outline: 0;
 }
 sub,
@@ -68,21 +80,43 @@ sup {
 sub {
   bottom: -0.25em;
 }
+dl,
+menu,
+ol,
+ul {
+  margin: 1em 0;
+}
+dd {
+  margin: 0 0 0 40px;
+}
+menu,
+ol,
+ul {
+  padding: 0 0 0 40px;
+}
+nav ul,
+nav ol {
+  list-style: none;
+  list-style-image: none;
+}
 img {
   max-width: 100%;
   vertical-align: middle;
   border: 0;
   -ms-interpolation-mode: bicubic;
 }
-#map_canvas img {
-  max-width: none;
-}
 button,
 input,
 select,
 textarea {
   margin: 0;
+  font-family: inherit;
   font-size: 100%;
+}
+.ie7 button,
+.ie7 input,
+.ie7 select,
+.ie7 textarea {
   vertical-align: middle;
 }
 button,
@@ -93,17 +127,26 @@ input {
 .lt-ie8 input {
   overflow: visible;
 }
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
 button,
-input[type="button"],
+html input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-  cursor: pointer;
   -webkit-appearance: button;
+  cursor: pointer;
+}
+button[disabled],
+input[disabled] {
+  cursor: default;
+}
+input[type="checkbox"],
+input[type="radio"] {
+  box-sizing: border-box;
+  padding: 0;
+}
+.ie7 input[type="checkbox"],
+.ie7 input[type="radio"] {
+  height: 13px;
+  width: 13px;
 }
 input[type="search"] {
   -moz-box-sizing: content-box;
@@ -114,9 +157,18 @@ input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button {
   -webkit-appearance: none;
 }
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
 textarea {
   overflow: auto;
   vertical-align: top;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 /*--------------- grid ------------------- */
 .row {
@@ -286,10 +338,6 @@ textarea {
   *width: 6.329787233638298%;
 }
 /*----------------------------------------- */
-html,
-body {
-  margin: 0;
-}
 ::-moz-selection {
   background: #222222;
   color: #ffffff;
