--- a/less/preset.less
+++ b/less/preset.less
@@ -6,6 +6,8 @@
 //-----------------------------------------------------
 // Grid
 // Typogrophy
+// Forms
+// Helper Classes
 
 
 
@@ -98,55 +100,29 @@ a {
 // Addresses styling not present in IE 8/9, Safari 5, and Chrome.
 // -------------------------
 
-//abbr[title] { border-bottom: 1px dotted; }
+abbr[title] {
+	border-bottom: 1px dotted;
+}
+
 p {
 	margin: 0 0 1em;
 }
 
-// Addresses style set to `bolder` in Firefox 4+, Safari 5, and Chrome.
-// -------------------------
-
-b,
-strong {
-	font-weight: bold;
-}
-
-
 blockquote {
 	margin: 1em 40px;
 }
-//dfn { font-style: italic; }
-//hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0; }
-//ins { background: #ff9; color: #000; text-decoration: none; }
-//mark { background: #ff0; color: #000; font-style: italic; font-weight: bold; }
-//pre, code, kbd, samp { font-family: monospace, serif; font-size: 1em; }
-//.lt-ie7 { pre, code, kbd, samp { font-family: 'courier new', monospace; }}
-//pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; }
 
-//q { quotes: none; }
-//q:before, q:after { content: ""; content: none; }
-//small { font-size: 85%; }
-//sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: baseline; }
-//sup { top: -0.5em; }
-//sub { bottom: -0.25em; }
 
-ul,
-ol {
-	margin: 1em 0;
-	padding: 0 0 0 40px;
-}
-//dd { margin: 0 0 0 40px; }
-nav ul,
-nav ol {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-}
+// Forms
+//-----------------------------------------------------
 
 //input:valid, textarea:valid {  }
 //input:invalid, textarea:invalid { background-color: #f0dddd; }
 
-/*--------------- helper classes ------------------- */
+
+// Helper Classes
+//-----------------------------------------------------
+
 //.ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; }
 //.ir br { display: none; }
 //.ie-lt8 .ir {  line-height: 0; }
@@ -155,5 +131,3 @@ nav ol {
 //.visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
 //.visuallyhidden.focusable:active, .visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }
 //.invisible { visibility: hidden; }
-/*----------------------------------------- */
-//whitespace needed for line separation in compiled file
